fix(css): avoid overflowing code on mobile

--- a/src/styles/_generic.css
+++ b/src/styles/_generic.css
@@ -1,3 +1,7 @@
 a {
   color: inherit;
 }
+
+pre {
+  overflow-x: auto;
+}
